--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -23,4 +23,27 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+/* my solution */
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content {
+  display: flex;
+  gap: 52px;
+  margin-top: 32px;
+}
+
+.content .card {
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
+  flex: auto;
+  align-items: center;
+  text-align: center;
 }
